20041101
 * Updated for DSSI v0.9: implemented project directory.
 * Updated for liblo v0.12: removed non-blocking hack.
 * Implemented loading soundfont from SF2_PATH in GUI.
 * Implemented gain setting in GUI.
 * Better inter-thread cooperation: fsd_configure() now avoids
     grabbing the mutex on 'load' calls when the soundfont is
     already loaded, and fsd_select_program() checks for valid
     programs before grabbing mutex, and saves the program change
     if it can't get the lock.
 
20041005
 * GUI now waits to send OSC update request from inside gtk_main()

20040715 DSSI v0.4 release
 * Added minimal GTK+ GUI.
 * Require DSSI v0.4.
 * Incorporated into DSSI as example code.
 * GUI: raise on 'show' if already visible.
 * Makefile: added install, use of liblo pkgconfig, use of correct
     FluidSynth includes.

20040623 v0.0.2
 * Added support for per-instance soundfont selection.
 * Changed from rendering directly into the output buffers, to
     always rendering into 16-byte aligned temporary buffers then
     copying to the output, in case libfluidsynth.* was compiled
     with SSE support.
 * Added mutex protection of fluidsynth structures between audio and
     control threads.
