@@ -1,3 +1,8 @@
+20041109
+ * Implemented global polyphony setting.
+ * GUI resizing fix.
+ * Optionally use GTK+ v2.x (edit Makefile).
+
 20041101
  * Updated for DSSI v0.9: implemented project directory.
  * Updated for liblo v0.12: removed non-blocking hack.
